[project]
name = "nordic-statistics-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
